--- a/web/css/base.css
+++ b/web/css/base.css
@@ -8,12 +8,13 @@ html {
 }
 body {
   line-height: 1.5;
-	font-family: sans-serif;
+  font-family: sans-serif;
   font-size: 1rem;
   margin: 0;
   padding: 0;
 }
 main {
+  display: block;
   padding: 2rem 1.25rem;
   max-width: 50rem;
   margin: 0 auto 3rem;
