--- a/web/css/base.css
+++ b/web/css/base.css
@@ -61,6 +61,17 @@ a[href]:active {
   color: #C00;
   border-color: #C00;
 }
+abbr[title] {
+  text-decoration: none;
+  border-bottom: 1px dotted;
+  padding: 0 1px 0;
+  margin: 0 -1px 0;
+  cursor: help;
+}
+abbr[title]:hover {
+  border-bottom-width: 2px;
+  margin-bottom: -1px;
+}
 button,
 [type="button"],
 [type="reset"],
